# ForearmMeshNet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: README.md  generate_muscle_mesh.py  groundtruth_pipeline_demo.py  pipeline_demo1.py  pipeline_demo2.py  quickstart.py
forearm_meshnet/: __init__.py
forearm_meshnet/config/: __init__.py  default_config.py
forearm_meshnet/data/: data_preparation.py  dataset.py  normalizer.py
forearm_meshnet/features/: __init__.py  anthropometric.py  graph_features.py
forearm_meshnet/inference/: __init__.py  predictor.py
forearm_meshnet/models/: __init__.py  encoder.py  losses.py  meshnet.py
forearm_meshnet/preprocessing/: mesh_utils.py  muscle_mesh.py  skin_mask.py  skin_mesh.py
forearm_meshnet/template/: muscle_template.py  skin_template.py  unified_template.py
forearm_meshnet/training/: __init__.py  curriculum.py  metrics.py  trainer.py
forearm_meshnet/utils/: __init__.py  io_utils.py  mesh_operations.py
forearm_meshnet_pkg/: LICENSE  requirements.txt
forearm_meshnet_pkg/config/: default_config.py
forearm_meshnet_pkg/docs/: api_reference.md  installation.md  usage.md
forearm_meshnet_pkg/examples/: generate_muscle_mesh.py
forearm_meshnet_pkg/forearm_meshnet/data/: __init__.py  normalizer.py
tests/: conftest.py  test_anthropometric.py  test_config.py  test_curriculum.py  test_data_preparation.py  test_dataset.py  test_decoder.py  test_encoder.py  test_graph_features.py  test_imports.py  test_io_utils.py  test_losses.py  test_mesh_operations.py  test_meshnet.py  test_metrics.py  test_normalizer.py  test_predictor.py  test_trainer.py
(+11 files in other folders)
